[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Logo/Incline.png" type="Texture" id=1]
[ext_resource path="res://scripts/_sc/menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Audio/Menus/v4menumusik.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Video/Menu/0001-0300.webm" type="VideoStream" id=4]
[ext_resource path="res://assets/Ui/Menu/Menu.tres" type="Theme" id=5]
[ext_resource path="res://addons/anima/core/tween.gd" type="Script" id=6]
[ext_resource path="res://assets/Ui/Menu/DesingyFuck@3x.png" type="Texture" id=7]
[ext_resource path="res://assets/Ui/Menu/Mountain Icon Red.png" type="Texture" id=8]
[ext_resource path="res://assets/Ui/Menu/Mountain Icon.png" type="Texture" id=9]
[ext_resource path="res://assets/Ui/Menu/Reset.svg" type="Texture" id=10]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/blur_amount = 1.392

[sub_resource type="CubeMesh" id=3]
flip_faces = true

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 4 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.567

[node name="Background" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Background"]
mesh = SubResource( 3 )
material/0 = null

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 690.176, 100 )
scale = Vector2( 0.0553663, 0.0553663 )
texture = ExtResource( 1 )

[node name="Main" type="Node2D" parent="CanvasLayer2"]

[node name="DesingyFuck3x" type="Sprite" parent="CanvasLayer2/Main"]
position = Vector2( 5.1074, 299.75 )
scale = Vector2( 0.614008, 0.614008 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mountain2" type="Sprite" parent="CanvasLayer2/Main"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 163, 88 )
scale = Vector2( 0.098545, 0.098545 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Mountain" type="Sprite" parent="CanvasLayer2/Main/Mountain2"]
texture = ExtResource( 8 )

[node name="Control" type="Control" parent="CanvasLayer2/Main"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/Main/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 177.0
margin_right = 293.0
margin_bottom = 466.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer2/Main/Control/VBoxContainer"]
margin_right = 253.0
margin_bottom = 26.0
theme = ExtResource( 5 )
text = "Continue"

[node name="New Game" type="Button" parent="CanvasLayer2/Main/Control/VBoxContainer"]
margin_top = 30.0
margin_right = 253.0
margin_bottom = 56.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save Select" type="Button" parent="CanvasLayer2/Main/Control/VBoxContainer"]
margin_top = 60.0
margin_right = 253.0
margin_bottom = 86.0
text = "Save Select"

[node name="Options" type="Button" parent="CanvasLayer2/Main/Control/VBoxContainer"]
margin_top = 90.0
margin_right = 253.0
margin_bottom = 116.0
toggle_mode = true
text = "Options"

[node name="Quit Game" type="Button" parent="CanvasLayer2/Main/Control/VBoxContainer"]
margin_top = 120.0
margin_right = 253.0
margin_bottom = 146.0
text = "Quit Game"

[node name="OptionsEnd" type="Position2D" parent="CanvasLayer2"]
position = Vector2( -445, 0 )
__meta__ = {
"_gizmo_extents_": 98.5
}

[node name="Options" type="Node2D" parent="CanvasLayer2"]

[node name="DesingyFuck3x" type="Sprite" parent="CanvasLayer2/Options"]
position = Vector2( 1319.52, 300.354 )
rotation = -3.14159
scale = Vector2( 0.614619, 0.614619 )
texture = ExtResource( 7 )

[node name="TabContainer" type="TabContainer" parent="CanvasLayer2/Options"]
margin_left = 1024.0
margin_top = 13.0
margin_right = 1468.0
margin_bottom = 575.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Tabs" parent="CanvasLayer2/Options/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/Options/TabContainer/General"]
anchor_right = 0.501
anchor_bottom = 1.0
margin_top = 15.0
margin_right = -30.079
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOV" type="VBoxContainer" parent="CanvasLayer2/Options/TabContainer/General/VBoxContainer"]
margin_right = 309.0
margin_bottom = 57.0

[node name="FOV" type="Label" parent="CanvasLayer2/Options/TabContainer/General/VBoxContainer/FOV"]
margin_right = 309.0
margin_bottom = 26.0
text = "FOV"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer2/Options/TabContainer/General/VBoxContainer/FOV"]
margin_top = 30.0
margin_right = 309.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="CanvasLayer2/Options/TabContainer/General/VBoxContainer/FOV/HBoxContainer"]
margin_right = 24.0
margin_bottom = 26.0
text = "60"

[node name="FOVSlider" type="HSlider" parent="CanvasLayer2/Options/TabContainer/General/VBoxContainer/FOV/HBoxContainer"]
margin_left = 28.0
margin_right = 278.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 60.0
max_value = 110.0
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer2/Options/TabContainer/General/VBoxContainer/FOV/HBoxContainer"]
margin_left = 282.0
margin_right = 309.0
margin_bottom = 27.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="Graphics" type="Tabs" parent="CanvasLayer2/Options/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="CanvasLayer2/Options/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Splash" type="Control" parent="CanvasLayer2"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashFade" type="ColorRect" parent="CanvasLayer2/Splash"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimaTween" type="Tween" parent="CanvasLayer2/Splash"]
script = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer2/Main/Control/VBoxContainer/Continue" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CanvasLayer2/Main/Control/VBoxContainer/Options" to="." method="_on_Options_toggled"]
